--- a/flight_trends.ipynb
+++ b/flight_trends.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,17 +42,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('./data/360755829_T_ONTIME_REPORTING.csv')\n",
+    "data = pd.read_csv('./data/985570288_T_ONTIME_REPORTING.csv')\n",
     "data = data.fillna(np.nan)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -119,17 +119,17 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>432757</td>\n",
-       "      <td>2016-01-31</td>\n",
+       "      <td>85404</td>\n",
+       "      <td>2019-01-05</td>\n",
        "      <td>AA</td>\n",
-       "      <td>1441</td>\n",
-       "      <td>RNO</td>\n",
+       "      <td>2363</td>\n",
+       "      <td>FAT</td>\n",
        "      <td>DFW</td>\n",
-       "      <td>1663.0</td>\n",
-       "      <td>1659.0</td>\n",
+       "      <td>1651.0</td>\n",
+       "      <td>1638.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1345.0</td>\n",
-       "      <td>1659.0</td>\n",
+       "      <td>1313.0</td>\n",
+       "      <td>1638.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -137,73 +137,73 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>112510</td>\n",
-       "      <td>2016-01-08</td>\n",
+       "      <td>452909</td>\n",
+       "      <td>2019-01-25</td>\n",
        "      <td>AA</td>\n",
-       "      <td>2205</td>\n",
-       "      <td>SAN</td>\n",
+       "      <td>511</td>\n",
+       "      <td>BUF</td>\n",
        "      <td>DFW</td>\n",
-       "      <td>1597.0</td>\n",
-       "      <td>1568.0</td>\n",
+       "      <td>1637.0</td>\n",
+       "      <td>1609.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1171.0</td>\n",
-       "      <td>1568.0</td>\n",
+       "      <td>1212.0</td>\n",
+       "      <td>960.0</td>\n",
+       "      <td>118.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>531.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>355264</td>\n",
+       "      <td>2019-01-19</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>335</td>\n",
+       "      <td>ORD</td>\n",
+       "      <td>MIA</td>\n",
+       "      <td>1566.0</td>\n",
+       "      <td>1556.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1197.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1514.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>294548</td>\n",
+       "      <td>2019-01-16</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>1586</td>\n",
+       "      <td>GSP</td>\n",
+       "      <td>DFW</td>\n",
+       "      <td>1500.0</td>\n",
+       "      <td>1508.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>862.0</td>\n",
+       "      <td>1500.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>320705</td>\n",
-       "      <td>2016-01-23</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>1012</td>\n",
-       "      <td>RSW</td>\n",
+       "      <td>373872</td>\n",
+       "      <td>2019-01-20</td>\n",
+       "      <td>YV</td>\n",
+       "      <td>5843</td>\n",
+       "      <td>BMI</td>\n",
        "      <td>DFW</td>\n",
-       "      <td>1554.0</td>\n",
-       "      <td>1543.0</td>\n",
+       "      <td>1487.0</td>\n",
+       "      <td>1495.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1017.0</td>\n",
-       "      <td>1543.0</td>\n",
+       "      <td>690.0</td>\n",
+       "      <td>1487.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>313024</td>\n",
-       "      <td>2016-01-22</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>2348</td>\n",
-       "      <td>BNA</td>\n",
-       "      <td>DFW</td>\n",
-       "      <td>1416.0</td>\n",
-       "      <td>1473.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>631.0</td>\n",
-       "      <td>1416.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>286003</td>\n",
-       "      <td>2016-01-20</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>1373</td>\n",
-       "      <td>JAX</td>\n",
-       "      <td>DFW</td>\n",
-       "      <td>1441.0</td>\n",
-       "      <td>1466.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>918.0</td>\n",
-       "      <td>1441.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>25.0</td>\n",
+       "      <td>8.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
@@ -214,28 +214,28 @@
       ],
       "text/plain": [
        "           FL_DATE OP_CARRIER  OP_CARRIER_FL_NUM ORIGIN DEST  DEP_DELAY  \\\n",
-       "432757  2016-01-31         AA               1441    RNO  DFW     1663.0   \n",
-       "112510  2016-01-08         AA               2205    SAN  DFW     1597.0   \n",
-       "320705  2016-01-23         AA               1012    RSW  DFW     1554.0   \n",
-       "313024  2016-01-22         AA               2348    BNA  DFW     1416.0   \n",
-       "286003  2016-01-20         AA               1373    JAX  DFW     1441.0   \n",
+       "85404   2019-01-05         AA               2363    FAT  DFW     1651.0   \n",
+       "452909  2019-01-25         AA                511    BUF  DFW     1637.0   \n",
+       "355264  2019-01-19         AA                335    ORD  MIA     1566.0   \n",
+       "294548  2019-01-16         AA               1586    GSP  DFW     1500.0   \n",
+       "373872  2019-01-20         YV               5843    BMI  DFW     1487.0   \n",
        "\n",
        "        ARR_DELAY  CANCELLED  DISTANCE  CARRIER_DELAY  WEATHER_DELAY  \\\n",
-       "432757     1659.0        0.0    1345.0         1659.0            0.0   \n",
-       "112510     1568.0        0.0    1171.0         1568.0            0.0   \n",
-       "320705     1543.0        0.0    1017.0         1543.0            0.0   \n",
-       "313024     1473.0        0.0     631.0         1416.0            0.0   \n",
-       "286003     1466.0        0.0     918.0         1441.0            0.0   \n",
+       "85404      1638.0        0.0    1313.0         1638.0            0.0   \n",
+       "452909     1609.0        0.0    1212.0          960.0          118.0   \n",
+       "355264     1556.0        0.0    1197.0           24.0           18.0   \n",
+       "294548     1508.0        0.0     862.0         1500.0            0.0   \n",
+       "373872     1495.0        0.0     690.0         1487.0            0.0   \n",
        "\n",
        "        NAS_DELAY  SECURITY_DELAY  LATE_AIRCRAFT_DELAY  Unnamed: 14  \n",
-       "432757        0.0             0.0                  0.0          NaN  \n",
-       "112510        0.0             0.0                  0.0          NaN  \n",
-       "320705        0.0             0.0                  0.0          NaN  \n",
-       "313024       57.0             0.0                  0.0          NaN  \n",
-       "286003       25.0             0.0                  0.0          NaN  "
+       "85404         0.0             0.0                  0.0          NaN  \n",
+       "452909        0.0             0.0                531.0          NaN  \n",
+       "355264        0.0             0.0               1514.0          NaN  \n",
+       "294548        8.0             0.0                  0.0          NaN  \n",
+       "373872        8.0             0.0                  0.0          NaN  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,18 +253,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False    389434\n",
-       "True      56393\n",
+       "False    498135\n",
+       "True      85850\n",
        "Name: delayed, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
